ui: Fix the new menu on mobile

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -30,3 +30,23 @@ input[type="number"][hide-spin-buttons]::-webkit-inner-spin-button {
 input[type="number"][hide-spin-buttons] {
   -moz-appearance: textfield;
 }
+
+@layer utilities {
+  .underlined {
+    display: inline-block;
+    position: relative;
+    background: inherit;
+  }
+
+  .underlined::after {
+    content: "";
+    width: 110%;
+    height: 24px;
+    border-width: 3px;
+    border-color: #fbbf24 transparent transparent;
+    border-radius: 100% 50% 0px 0px;
+    position: absolute;
+    top: 93%;
+    left: -5%;
+  }
+}
